--- a/styles/Block.module.scss
+++ b/styles/Block.module.scss
@@ -92,7 +92,7 @@ $block-height: 323px;
     width: $block-width;
     height: $block-height;
     padding: 30px 29px 0 29px;
-    font: normal normal bold 16px/24px "Work Sans Bold";
+    font: normal normal bold 16px/24px var(--sans-bold);
     letter-spacing: 0.8px;
     color: #FFFFFF;
     text-transform: uppercase;
