--- a/styles/WynajecieForm.module.scss
+++ b/styles/WynajecieForm.module.scss
@@ -45,7 +45,7 @@
     padding-left: 177px;
     padding-top: 29px;
     padding-bottom: 6px;
-    font: normal normal 300 20px/28px "Work Sans Light";
+    font: normal normal 300 20px/28px var(--sans-light);
 }
 
 .twoInputs{
