--- a/styles/CennikTable.module.scss
+++ b/styles/CennikTable.module.scss
@@ -15,7 +15,7 @@ $column-heght: 90px;
 @mixin name {
     display: flex;
     align-items: center;
-    font: normal normal 24px/28px "Work Sans Medium";
+    font: normal normal 24px/28px var(--sans-medium);
     letter-spacing: 0px;
     color: #411141; 
     border-bottom: $border;
@@ -29,7 +29,7 @@ $column-heght: 90px;
     transform: rotate(-90deg) translate(-5px, 0);
     width: $column-heght;
     height: $column-heght;
-    font: normal normal 300 24px/28px "Work Sans Light";
+    font: normal normal 300 24px/28px var(--sans-light);
     margin: 0;
     letter-spacing: 0px;
     color: #411141;
