--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,7 +1,7 @@
 @import './Varablies.scss';
 
 @mixin h2{
-    font: normal normal 900 35px/42px "Work Sans Black";
+    font: normal normal 900 35px/42px var(--sans-black);
     letter-spacing: 0px;
     color: #FFFFFF;
 }
@@ -56,7 +56,7 @@
             @include h2;
             @media (max-width: 700px) {
                 margin-bottom: 30px;
-                font: normal normal 900 30px/35px "Work Sans Black";
+                font: normal normal 900 30px/35px var(--sans-black);
             }
             &.last{
                 margin-bottom: 80px;
@@ -67,7 +67,7 @@
         }
         .regions{
             display: flex;
-            font: normal normal 300 16px/27px "Work Sans Light";
+            font: normal normal 300 16px/27px var(--sans-light);
             letter-spacing: 0px;
             a{
                 color: #FFFFFF;
@@ -94,7 +94,7 @@
             .top{
                 display: flex;
                 flex-direction: column;
-                font: normal normal 300 16px/19px "Work Sans Light";
+                font: normal normal 300 16px/19px var(--sans-light);
                 letter-spacing: 0px;
                 color: #FFFFFF;
                 max-width: 295px;
@@ -115,7 +115,7 @@
                     }
                 }
                 .bold{
-                    font: normal normal 900 16px/19px "Work Sans Bold";
+                    font: normal normal 900 16px/19px var(--sans-bold);
                 }
             }
             .bottom{
@@ -192,7 +192,7 @@
         @include blockText();
         padding: 0;
         color: #ffffff;
-        font: normal normal 900 16px/22px "Work Sans Black";
+        font: normal normal 900 16px/22px var(--sans-black);
         a{
             text-decoration: underline;
         }
@@ -202,7 +202,7 @@
         padding: 0;
         color: #ffffff;
         margin-top: 13px;
-        font: normal normal 900 20px/22px "Work Sans Black";
+        font: normal normal 900 20px/22px var(--sans-black);
     }
 }
 
