--- a/styles/Hours.module.scss
+++ b/styles/Hours.module.scss
@@ -5,7 +5,7 @@
     // flex-basis: 33%;
     justify-content: center;
     padding: 10px 0;
-    font: normal normal normal 14px/16px Work Sans;
+    font: normal normal normal 14px/16px var(--sans);
     letter-spacing: 0px;
     width: 96px;
     @media (max-width: 700px) {
@@ -135,7 +135,7 @@
     padding-left: 30px;
     display: flex;
     justify-content: space-between;
-    font: normal normal bold 17px/15px "Work Sans Black";
+    font: normal normal bold 17px/15px var(--sans-black);
     letter-spacing: 0px;
     color: #121109;
     height: 20px;
@@ -152,7 +152,7 @@
     max-width: 390px;
     height: 53px;
     margin-top: 8px;
-    font: normal normal 900 18px/21px "Work Sans Black";
+    font: normal normal 900 18px/21px var(--sans-black);
     text-transform: uppercase;
     border: none;
     cursor: pointer;
@@ -197,7 +197,7 @@
 .sprawdzBtn{
     @include btn();
     background: $main-color 0% 0% no-repeat padding-box;
-    font: normal normal 900 16px/21px "Work Sans Black";
+    font: normal normal 900 16px/21px var(--sans-black);
     letter-spacing: -0.09px;
     // color: #FFFFFF;
     transition-duration: 0.4s;
@@ -212,7 +212,7 @@
 .homeCancelBtn{
     @include btn();
     background: #121109 0% 0% no-repeat padding-box;
-    font: normal normal 900 16px/21px "Work Sans Black";
+    font: normal normal 900 16px/21px var(--sans-black);
     color: #FFFFFF;
     transition-duration: 0.4s;
     &:hover{
