--- a/styles/Ksiegowosc.module.scss
+++ b/styles/Ksiegowosc.module.scss
@@ -2,9 +2,9 @@
 
 .headerTextBoldFont{
     @include headerBoldFont();
-    font: normal normal 900 16px/24px "Work Sans Black";
+    font: normal normal 900 16px/24px var(--sans-black);
     @media all and (max-width: 1300px){
-        font: normal normal 900 16px/24px "Work Sans Black";
+        font: normal normal 900 16px/24px var(--sans-black);
     }
 }
 
@@ -24,7 +24,7 @@
         text-align: center;
     }
     @media (max-width: 700px) {
-        font: normal normal 900 20px/24px "Work Sans Black";
+        font: normal normal 900 20px/24px var(--sans-black);
         margin: 62px 26px 101px 26px;
         text-align: left;
     }
@@ -48,9 +48,6 @@
 .ksiegowosc{
     position: relative;
     @include start-animation();
-    a{
-        text-decoration: underline;
-    }
     .headerTitle{
         @include headerTitle();
         // margin-top: 150px;
@@ -61,6 +58,9 @@
         margin-right: 150px;
         @media (max-width: 700px) {
             max-width: 340px;
+        }
+        a{
+            text-decoration: underline;
         }
     }
     .headerText{
@@ -82,6 +82,9 @@
         .boldFont{
             text-transform: lowercase;
         }
+        a{
+            text-decoration: underline;
+        }    
     }
     .smallText{
         @include smallText();
@@ -109,18 +112,18 @@
             padding-top: 33px;   
             max-width: 260px;
             @media (max-width: 700px) {
-                font: normal normal 900 20px/24px "Work Sans Black";
+                font: normal normal 900 20px/24px var(--sans-black);
             }
         }
         .blockText{
             display: flex;
             padding: 29px 44px 0 29px;
-            font: normal normal 300 16px/19px "Work Sans Light";
+            font: normal normal 300 16px/19px var(--sans-light);
             letter-spacing: 0px;
             line-height: 2;
             color: $text-color;
             @media (max-width: 700px) {
-                font: normal normal 300 14px/30px "Work Sans Light";
+                font: normal normal 300 14px/30px var(--sans-light);
             }
         }
         @media (max-width: 850px) {
@@ -188,14 +191,14 @@
                 margin-bottom: 36px;
             }
             .top{
-                font: normal normal 900 56px/66px "Work Sans Black";
+                font: normal normal 900 56px/66px var(--sans-black);
                 letter-spacing: 0px;
                 color: $main-color;
                 text-transform: lowercase;
             }
             .bottom{
                 // position: absolute;
-                font: normal normal 300 16px/25px "Work Sans Light";
+                font: normal normal 300 16px/25px var(--sans-light);
                 letter-spacing: 0px;
                 color: #411141;
                 left: 0;
@@ -221,7 +224,7 @@
                 height: 323px;
                 .firm{
                     margin-left: 29px;
-                    font: normal normal 900 16px/19px "Work Sans Black";
+                    font: normal normal 900 16px/19px var(--sans-black);
                     letter-spacing: 0px;
                     color: #411141;
                 }
@@ -231,7 +234,7 @@
             position: absolute;
             left: -45px;
             top: -40px;
-            font: normal normal 300 205px/241px "Work Sans Light";
+            font: normal normal 300 205px/241px var(--sans-light);
             letter-spacing: 0px;
             color: #CD0000;
             transform: matrix(-1, 0, 0, -1, 0, 0);
