--- a/styles/Localizacje.module.scss
+++ b/styles/Localizacje.module.scss
@@ -27,12 +27,12 @@
         .left, .right{
             width: 549px;
             .name{
-                font: normal normal 900 24px/32px "Work Sans Black";
+                font: normal normal 900 24px/32px var(--sans-black);
                 letter-spacing: 0px;
                 color: #411141;
             }
             .street{
-                font: normal normal 300 20px/32px "Work Sans Light";
+                font: normal normal 300 20px/32px var(--sans-light);
                 letter-spacing: 0px;
                 color: #411141;
             }
