--- a/styles/PakietTable.module.scss
+++ b/styles/PakietTable.module.scss
@@ -15,13 +15,13 @@ $column-heght: 45px;
 @mixin name {
     display: flex;
     align-items: center;
-    font: normal normal 16px/19px "Work Sans Medium";
+    font: normal normal 16px/19px var(--sans-medium);
     letter-spacing: 0px;
     color: #411141; 
     border-bottom: $border;
     height: $column-heght;  
     @media (max-width: 700px) {
-        font: normal normal 12px/19px "Work Sans Medium";
+        font: normal normal 12px/19px var(--sans-medium);
     }
 }
 
@@ -32,7 +32,7 @@ $column-heght: 45px;
     transform: rotate(-90deg) translate(5px, 0);
     width: $column-heght;
     height: $column-heght;
-    font: normal normal 300 24px/28px "Work Sans Light";
+    font: normal normal 300 24px/28px var(--sans-light);
     margin: 0;
     letter-spacing: 0px;
     color: #411141;
