--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -19,7 +19,7 @@
         flex-direction: column;
         // margin-right: 27px;
         .smallTitle{
-            font: normal normal 900 16px/19px "Work Sans Black";
+            font: normal normal 900 16px/19px var(--sans-black);
             color: $text-color;
             padding-top: 69.5px;
         }
