--- a/styles/YourReservation.module.scss
+++ b/styles/YourReservation.module.scss
@@ -10,20 +10,20 @@
         justify-content: flex-start;
         margin-top: 19px;
         .left{
-            font: normal normal 900 16px/19px "Work Sans Black";
+            font: normal normal 900 16px/19px var(--sans-black);
             letter-spacing: 0px;
             color: #121109;
             @media (max-width: 700px) {
-                font: normal normal 900 14px/19px "Work Sans Black";                
+                font: normal normal 900 14px/19px var(--sans-black);                
             }
         }
         .right{
-            font: normal normal 300 16px/19px "Work Sans Light";
+            font: normal normal 300 16px/19px var(--sans-light);
             letter-spacing: 0px;
             color: #121109;
             margin-left: 30px;
             @media (max-width: 700px) {
-                font: normal normal 300 14px/19px "Work Sans Light";
+                font: normal normal 300 14px/19px var(--sans-light);
             }
         }
     }
