--- a/styles/CennikChoices.module.scss
+++ b/styles/CennikChoices.module.scss
@@ -254,4 +254,12 @@
     z-index: 1;
     text-align: center;
     line-height: 55px;
+    @media (max-width: 700px) {
+        height: 38px;
+        width: 156px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
+    }
 }
