--- a/styles/Hours.module.scss
+++ b/styles/Hours.module.scss
@@ -18,7 +18,7 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: #FFFFFF;
-    z-index: 1;
+    // z-index: 1;
 }
 
 .hour{
