--- a/styles/PakietTable.module.scss
+++ b/styles/PakietTable.module.scss
@@ -1,6 +1,7 @@
 @import './Varablies.scss';
 
 $column-heght: 45px;
+$second-column-height: 55px;
 
 @mixin signWrapper {
     width: $column-heght;
@@ -9,7 +10,10 @@ $column-heght: 45px;
     justify-content: center;
     align-items: center;
     border-bottom: $border;
-    // border-left: $border;    
+    // border-left: $border;  
+    @media(max-width: 900px){
+        height: $second-column-height;
+    }  
 }
 
 @mixin name {
@@ -20,6 +24,9 @@ $column-heght: 45px;
     color: #411141; 
     border-bottom: $border;
     height: $column-heght;  
+    @media(max-width: 900px){
+        height: $second-column-height;
+    } 
     @media (max-width: 700px) {
         font: normal normal 12px/19px var(--sans-medium);
     }
@@ -36,11 +43,17 @@ $column-heght: 45px;
     margin: 0;
     letter-spacing: 0px;
     color: #411141;
+    @media(max-width: 900px){
+        height: $second-column-height;
+    } 
 }
 
 .cennikTable, .pakietTable{
     padding-right: $sidebar-width;
     width: 100%;
+    @media (max-width: 1200px) {
+        padding-right: 20px;
+    }
     @media (max-width: 700px) {
         padding-right: 0;
     }
@@ -69,7 +82,9 @@ $column-heght: 45px;
                 border-bottom: $border;
             }
         }
-        
+    }
+    a{
+        text-decoration: underline;
     }
 }
 
